# ev_sdk_demo4.0_pedestrian_intrusion_yolov5

./: CMakeLists.txt  LICENSE  README.md
3rd/: export.py
3rd/jsoncpp_simple/: CMakeLists.txt
config/: README.md  algo_config.json
doc/: EV_SDK接口规范说明.md  EV_SDK配置协议说明.md  人脸识别接口文档.md  极市算法SDK输出协议.md
include/: ji.h  ji_error.h  ji_types.h  ji_utils.h
src/: Configuration.hpp  SampleAlgorithm.cpp  SampleAlgorithm.hpp  SampleDetector.cpp  SampleDetector.h  ji.cpp
test/: Algo.cpp  Algo.h  CMakeLists.txt  test.cpp
